--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -113,7 +113,7 @@
                                     </thead>
                                     <tbody>
                                         <tr *ngFor="let j of recentSessiondata">
-                                            <td><img src="http://192.168.1.28:8001/media/{{j.profilepic}}/" class="tab2img"></td>
+                                            <td><img src='http://192.168.1.28:8001/media/{{j.profilepic}}/' class="tab2img"></td>
                                             <td>{{j.host}}</td>
                                             <td>{{j.sport}}</td>
                                            
