--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -39,17 +39,17 @@
                         <th>Contacts</th>
                         <th>Location</th>
                         <th>Date of joining</th>
-                        <th>Country</th>
+                       
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let j of usertabData" (click)="openDetail()">
-                        <td><img src={{j.url}} class="tab1img"></td>
-                        <td>{{j.id}}</td>
-                        <td>{{j.email}}</td>
-                        <td>New York</td>
-                        <td>24 Jan 19</td>
-                        <td>USA</td>
+                        <td><img src='http://192.168.1.28:8001/media/{{j.profilepic}}' class="tab1img"></td>
+                        <td>{{j.username}}</td>
+                        <td>{{j.email}}<br>{{j.mobile}}</td>
+                        <td>{{j.location}}</td>
+                        <td>{{j.joiningdate}}</td>
+                       
                     </tr>
                 </tbody>
             </table>
