--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <h2>Login Form</h2>
+<ngx-spinner type="ball-atom" size="medium"></ngx-spinner>
 
 <form [formGroup]="loginForm" >
   <div class="imgcontainer">
