--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,5 +1,5 @@
 <p class="userDetail_p">
-  User / Abhishek Kumar
+  User / {{userDetail.username}}
 </p>
 <div class="maindiv">
   <div class="nestedDiv">
@@ -7,38 +7,92 @@
     <div class="container-fluid">
       <div class="row" style="padding-top:20px;">
         <div class="col-lg-3" style=" height: 154px;">
-          <img src="assets/img/game.jpeg" width="100%" height="100%">
+          <img src="http://192.168.1.28:8001/media/{{userDetail.profilepic}}/" width="100%" height="100%">
         </div>
         <div class="col-lg-9">
           <!-- ******dETAILS START***** -->
           <div class="details">
-            <h2 style="margin:0%">Abhishek Kumar</h2>
+            <h2 style="margin:0%">{{userDetail.username}}</h2>
             <button class="userDetBtn">Suspend</button>
-            <span class="fa fa-star checked" style="margin-right:7px;"></span>
-            <span class="fa fa-star checked" style="margin-right:7px;"></span>
-            <span class="fa fa-star checked" style="margin-right:7px;"></span>
-            <span class="fa fa-star " style="margin-right:7px;"></span>
-            <span class="fa fa-star" style="margin-right:10px"></span>
-            <span>Based on 200 rating</span>
+             <span *ngIf="userDetail.rating==4.5">
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star-half checked" style="margin-right:10px;"></span>
+            </span>
+            <span *ngIf="userDetail.rating==4">
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:10px;"></span>
+            </span>
+            <span *ngIf="userDetail.rating==3.5">
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star-half checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:10px;"></span>
+            </span>
+            <span *ngIf="userDetail.rating==3">
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:10px;"></span>
+            </span>
+            <span *ngIf="userDetail.rating==2.5">
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star-half checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:10px;"></span>
+            </span>
+            <span *ngIf="userDetail.rating==2">
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star checked" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:7px;"></span>
+              <span class="fa fa-star" style="margin-right:10px;"></span>
+            </span>
+            <span *ngIf="userDetail.rating==1.5">
+                <span class="fa fa-star checked" style="margin-right:7px;"></span>
+                <span class="fa fa-star-half checked" style="margin-right:7px;"></span>
+                <span class="fa fa-star" style="margin-right:7px;"></span>
+                <span class="fa fa-star" style="margin-right:7px;"></span>
+                <span class="fa fa-star" style="margin-right:10px;"></span>
+              </span> 
+              <span *ngIf="userDetail.rating==1">
+                  <span class="fa fa-star checked" style="margin-right:7px;"></span>
+                  <span class="fa fa-star" style="margin-right:7px;"></span>
+                  <span class="fa fa-star" style="margin-right:7px;"></span>
+                  <span class="fa fa-star" style="margin-right:7px;"></span>
+                  <span class="fa fa-star" style="margin-right:10px;"></span>
+                </span>  
+           
+              <span>Based on {{userDetail.ratecount}} rating</span>
+           
           </div>
           <div class="container-fluid">
             <div class="row" style="padding-top:20px;">
               <div class="col-lg-7" style="
               border-right:1px solid grey;">
                 <p style="display:flex;justify-content:left">
-                  Location <span style="margin-left:30px">:<span style="margin-left:30px"> Sector 63, Noida, Uttar
-                      Pradesh, India </span></span>
+                  Location <span style="margin-left:30px">:<span style="margin-left:30px"> {{userDetail.location}}
+                    </span></span>
                 </p>
                 <p style="display:flex;justify-content:left">
-                  Email <span style="margin-left:48px">:<span style="margin-left:30px">abc@gmail.com</span></span>
+                  Email <span style="margin-left:48px">:<span style="margin-left:30px">{{userDetail.email}}</span></span>
                 </p>
               </div>
               <div class="col-lg-5" style="padding-left:45px">
                 <p style="display:flex;justify-content:left">
-                  Mobile No. <span style="margin-left:30px">:<span style="margin-left:30px"> 1234567890 </span></span>
+                  Mobile No. <span style="margin-left:30px">:<span style="margin-left:30px"> {{userDetail.mobile}}
+                    </span></span>
                 </p>
                 <p style="display:flex;justify-content:left">
-                  Joining Date <span style="margin-left:20px">:<span style="margin-left:30px">20/12/19</span></span>
+                  Joining Date <span style="margin-left:20px">:<span style="margin-left:30px">{{userDetail.joiningdate}}</span></span>
                 </p>
               </div>
             </div>
@@ -59,10 +113,11 @@
       <!-- Game -->
       <div>
         <div class="row" style="padding:20px 20px 5px 20px; ">
-          <div class="col-lg-2" *ngFor="let i of gameData" style="margin-bottom: 5px;align-items: center">
+          <div class="col-lg-2" *ngFor="let i of userDetail.interestnlevel;" style="margin-bottom: 5px;align-items: center">
             <div class="game_card">
-              <img src={{i.url}} class="dash_img">
-              <h4>{{i.gamename}}</h4>
+              <img src='http://192.168.1.28:8001/media/{{i.picture}}/' class="dash_img">
+
+              <h4>{{i.sportname}}</h4>
               <h6>{{i.level}}</h6>
 
               <!-- <div class="div1">
@@ -93,85 +148,85 @@
 
       <div class="tab-content">
         <div id="home" class="tab-pane fade in active">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Username</th>
-                        <th>Contacts</th>
-                        <th>Location</th>
-                        <th>Date of joining</th>
-                        <th>Country</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let j of usertabData" (click)="openDetail()">
-                        <td><img src={{j.url}} class="tab1img"></td>
-                        <td>{{j.id}}</td>
-                        <td>{{j.email}}</td>
-                        <td>New York</td>
-                        <td>24 Jan 19</td>
-                        <td>USA</td>
-                    </tr>
-                </tbody>
-              </table>
+          <table class="table">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Username</th>
+                <th>Contacts</th>
+                <th>Location</th>
+                <th>Date of joining</th>
+                <th>Country</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let j of usertabData" (click)="openDetail()">
+                <td><img src={{j.url}} class="tab1img"></td>
+                <td>{{j.id}}</td>
+                <td>{{j.email}}</td>
+                <td>New York</td>
+                <td>24 Jan 19</td>
+                <td>USA</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div id="menu1" class="tab-pane fade">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Username</th>
-                        <th>Contacts</th>
-                        <th>Location</th>
-                        <th>Date of joining</th>
-                        <th>Country</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let j of usertabData" (click)="openDetail()">
-                        <td><img src={{j.url}} class="tab1img"></td>
-                        <td>{{j.id}}</td>
-                        <td>{{j.email}}</td>
-                        <td>New York</td>
-                        <td>24 Jan 19</td>
-                        <td>USA</td>
-                    </tr>
-                </tbody>
-              </table>
-      </div>
-      <div id="menu2" class="tab-pane fade">
           <table class="table">
-              <thead>
-                  <tr>
-                      <th></th>
-                      <th>Username</th>
-                      <th>Contacts</th>
-                      <th>Location</th>
-                      <th>Date of joining</th>
-                      <th>Country</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr *ngFor="let j of usertabData" (click)="openDetail()">
-                      <td><img src={{j.url}} class="tab1img"></td>
-                      <td>{{j.id}}</td>
-                      <td>{{j.email}}</td>
-                      <td>New York</td>
-                      <td>24 Jan 19</td>
-                      <td>USA</td>
-                  </tr>
-              </tbody>
-            </table>
-    </div>
-    </div>
-    <!-- ************Table Div end******** -->
+            <thead>
+              <tr>
+                <th></th>
+                <th>Username</th>
+                <th>Contacts</th>
+                <th>Location</th>
+                <th>Date of joining</th>
+                <th>Country</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let j of usertabData" (click)="openDetail()">
+                <td><img src={{j.url}} class="tab1img"></td>
+                <td>{{j.id}}</td>
+                <td>{{j.email}}</td>
+                <td>New York</td>
+                <td>24 Jan 19</td>
+                <td>USA</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div id="menu2" class="tab-pane fade">
+          <table class="table">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Username</th>
+                <th>Contacts</th>
+                <th>Location</th>
+                <th>Date of joining</th>
+                <th>Country</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let j of usertabData" (click)="openDetail()">
+                <td><img src={{j.url}} class="tab1img"></td>
+                <td>{{j.id}}</td>
+                <td>{{j.email}}</td>
+                <td>New York</td>
+                <td>24 Jan 19</td>
+                <td>USA</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <!-- ************Table Div end******** -->
 
 
 
-    <!-- **********Interested in div end********** -->
-    <div style="justify-content: center; display: flex;padding: 15px 0px">
-      <ngb-pagination size="lg" [collectionSize]="70" [(page)]="page" [boundaryLinks]="true"></ngb-pagination>
+      <!-- **********Interested in div end********** -->
+      <div style="justify-content: center; display: flex;padding: 15px 0px">
+        <ngb-pagination size="lg" [collectionSize]="70" [(page)]="page" [boundaryLinks]="true"></ngb-pagination>
+      </div>
     </div>
   </div>
-</div>
